# actress_downloader

./: .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
config/: settings.toml
docs/: PROJECT_STATUS.md  TECHNICAL_OVERVIEW_ZH.md
examples/: demo_catalog.json
scripts/: init_db.py
sql/: init_schema.sql
src/actress_downloader/: __init__.py  alias_expander.py  cli.py  config.py  domain.py  graph.py  llm.py  pipeline.py  sidecar.py  storage.py  tagging.py  timing.py  utils.py
src/actress_downloader/connectors/: __init__.py  base.py  javbus.py  seed.py
tests/: test_config.py  test_javbus_alias_resolution.py  test_javbus_connector.py  test_llm_prompt.py  test_seed_connector.py  test_sidecar.py  test_storage.py  test_tagging.py
