[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actress-downloader"
version = "0.1.0"
description = "MVP catalog pipeline for performer aliases, work codes, tags, and sidecar metadata."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "httpx>=0.27",
  "langgraph>=0.2",
  "psycopg[binary]>=3.2",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
